--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.3.0",
     "antd": "^5.14.2",
     "autoprefixer": "^10.4.16",
-    "classnames": "^2.3.2",
+    "classnames": "^2.5.1",
     "history": "^5.3.0",
     "lodash": "^4.17.21",
     "postcss": "^8.4.32",
@@ -34,6 +35,7 @@
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "postcss-antd-fixes": "^0.2.0",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
   }
