--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "extract": "lingui extract"
   },
   "dependencies": {
     "@ant-design/icons": "^5.3.0",
+    "@lingui/macro": "^4.7.1",
+    "@lingui/react": "^4.7.1",
     "antd": "^5.14.2",
     "autoprefixer": "^10.4.16",
     "classnames": "^2.5.1",
@@ -25,6 +28,8 @@
     "tailwindcss": "^3.3.6"
   },
   "devDependencies": {
+    "@lingui/cli": "^4.7.1",
+    "@lingui/vite-plugin": "^4.7.1",
     "@types/lodash": "^4.14.202",
     "@types/node": "^20.11.20",
     "@types/react": "^18.2.15",
@@ -32,6 +37,7 @@
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
+    "babel-plugin-macros": "^3.1.0",
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
