--- a/package.json
+++ b/package.json
@@ -15,17 +15,14 @@
     "@lingui/macro": "^4.7.1",
     "@lingui/react": "^4.7.1",
     "antd": "^5.14.2",
-    "autoprefixer": "^10.4.16",
     "classnames": "^2.5.1",
     "history": "^5.3.0",
     "lodash": "^4.17.21",
-    "postcss": "^8.4.32",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1",
     "react-use": "^17.5.0",
-    "rxjs": "^7.8.1",
-    "tailwindcss": "^3.3.6"
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "@lingui/cli": "^4.7.1",
@@ -37,11 +34,14 @@
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
+    "autoprefixer": "^10.4.16",
     "babel-plugin-macros": "^3.1.0",
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "postcss": "^8.4.32",
     "postcss-antd-fixes": "^0.2.0",
+    "tailwindcss": "^3.3.6",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
   }
